--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex01.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex01.html
@@ -4,15 +4,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        .evidenziato {
-  background-color:hotpink; /* Rosa semitrasparente */
-  padding: 2px 5px; /* Aggiunge un po' di spazio intorno al testo */
-  border-radius: 3px; /* Arrotonda gli angoli */
-}
+      .evidenziato {
+        background-color: hotpink;
+        padding: 2px 5px;
+        border-radius: 3px;
+      }
     </style>
   </head>
   <body>
-    <h1><span class="evidenziato">Il mio primo Esercizio in HTML by 3BIF</span></h1>
+    <h1>
+      <span class="evidenziato">Il mio primo Esercizio in HTML by 3BIF</span>
     </h1>
     <h2>Il mio primo Esercizio in HTML by 3BIF</h2>
     <h3>Il mio primo Esercizio in HTML by 3BIF</h3>
