Aggiorna i percorsi delle risorse multimediali in Ex03.html

--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex03.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex03.html
@@ -10,23 +10,40 @@
     <p>Ciao JPG</p>
     <hr />
     <p>...</p>
-    <img src="/HTML/koala.jpg"" width="300" height="200">
+    <img src="..//MEDIA/koala.jpg"" width="300" height="200">
     <p>...</p>
     <p>...</p>
     <p>...</p>
-    <img src="..//HTML/tiramisù.jpg" />
+    <img src="..//MEDIA//tiramisù.jpg" />
     <p>...</p>
     <p>...</p>
     <p>...</p>
-    <img src="..//HTML/carbonara.jpg" width="300" height="200">
+    <img src="..//MEDIA//carbonara.jpg" width="300" height="200" />
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <hr />
     <video width="320" height="240" controls>
-      <source src="video.mp4" type="video/mp4" />
-      Your browser does not support the video tag.
+      <source src="..//MEDIA//video.mp4" type="video/mp4" />
     </video>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>Ciao Video</p>
+    <hr />
     <audio controls>
-      <source src="audio.mp3" type="audio/mpeg" />
+      <source src="..//MEDIA//audio.mp3" type="audio/mpeg" />
       Your browser does not support the audio element.
     </audio>
-    <img src="faccinagialla.gif" alt="Descrizione dell'immagine" />
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>Ciao Audio</p>
+    <hr />
+    <img src="..//MEDIA//faccinagialla.gif" alt="Descrizione dell'immagine" />
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>Ciao GIF</p>
   </body>
 </html>
