--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex04.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex04.html
@@ -2,23 +2,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ex01-B.html</title>
+    <title>Ex04.html</title>
     <style>
-      h1 {
-        color: blue;
-        background: linear-gradient(to right, green, white, red);
-        border: 4px solid red;
-      }
       .roger {
-        text-align: center;
-      }
-      h3 {
         text-align: center;
       }
       .quarto {
         text-align: right;
-    
-    </style>  }
+      }
       .cammino,
       .vita {
         font-weight: bold;
@@ -29,20 +20,26 @@
       .via {
         text-decoration: underline;
       }
+      h4 {
+        text-align: right;
+      }
+    </style>
   </head>
   <body>
-    <h1>Titolo H1</h1>
-    <h2>Titolo H2</h2>
     <p>ciao ...</p>
-    <p>ciao.</p>
+    <p>ciao. Vedrai che non va a capo</p>
     <h1>Rock</h1>
     <h2 class="roger">Roger</h2>
-    <p><span class="cammino">Nel mezzo</span></p>
-    <div></div>
+    <h3>Waters</h3>
+    <h4>Pink Floyd</h4>
+    <h1>Pippo</h1>
+    <p><span class="cammino">Nel mezzo del</span></p>
     <p>
-      <span class="vita"> del cammin di nostra vita</span>
+      <span class="vita">cammin di nostra vita</span>
       <span class="selva">mi ritrovai per una selva oscura</span>
       <span class="via">che la diritta via era smarrita.</span>
     </p>
+    <p>...</p>
+    <a href="#">Geografia o gazzetta?</a>
   </body>
 </html>
