Aggiungi un'immagine e un div vuoto in Ex04.html

--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex04.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex04.html
@@ -40,6 +40,8 @@
       <span class="via">che la diritta via era smarrita.</span>
     </p>
     <p>...</p>
+    <img src="..//MEDIA/koala.jpg"" width="300" height="200">
+    <div></div>
     <a href="#">Geografia o gazzetta?</a>
   </body>
 </html>
