Aggiungi il file Ex15.js per la gestione del canvas e migliora la struttura di Ex15.html

--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex15.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex15.html
@@ -5,14 +5,12 @@
     <title>Ex15.html</title>
   </head>
   <body>
-    <canvas id="c1" width="500" height="300"
-        style="border:3px solid black;">
-     Messaggio di errore su canvas
-</canvas>
-
+    <canvas id="c1" width="500" height="300" style="border: 3px solid black">
+      Messaggio di errore su canvas
+    </canvas>
 
     <script>
-    var d = document.getElementById("c1");
-    var ctx = d.getContext("2d");>
+      
+    </script>
   </body>
 </html>
