--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex15.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex15.html
@@ -3,14 +3,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ex15.html</title>
+    <script src="..//JavaScript/Ex15.js"></script>
   </head>
   <body>
     <canvas id="c1" width="500" height="300" style="border: 3px solid black">
-      Messaggio di errore su canvas
     </canvas>
-
-    <script>
-      
-    </script>
   </body>
 </html>
