--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex15.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex15.html
@@ -1,11 +1,17 @@
-<html lang="en">
+<html lang="en-GB">
+  <!-- Set the language to British English -->
   <head>
     <meta charset="UTF-8" />
+    <!-- Specify the character encoding -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Ensure proper scaling on mobile devices -->
     <title>Ex15.html</title>
+    <!-- Title of the document -->
     <script src="..//JavaScript/Ex15.js"></script>
+    <!-- Link to the external JavaScript file -->
   </head>
   <body>
+    <!-- Canvas element for drawing graphics -->
     <canvas id="c1" width="500" height="300" style="border: 3px solid black">
     </canvas>
   </body>
