Correggi il percorso del file JavaScript in Ex15.html

--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex15.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex15.html
@@ -7,7 +7,7 @@
     <!-- Ensure proper scaling on mobile devices -->
     <title>Ex15.html</title>
     <!-- Title of the document -->
-    <script src="..//JavaScript/Ex15.js"></script>
+    <script src="Ex15.js"></script>
     <!-- Link to the external JavaScript file -->
   </head>
   <body>
