Aggiorna il percorso di anteprima predefinito e aggiungi il file CSS per Ex04.html

--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex04.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex04.html
@@ -3,27 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ex04.html</title>
-    <style>
-      .roger {
-        text-align: center;
-      }
-      .quarto {
-        text-align: right;
-      }
-      .cammino,
-      .vita {
-        font-weight: bold;
-      }
-      .selva {
-        font-style: italic;
-      }
-      .via {
-        text-decoration: underline;
-      }
-      h4 {
-        text-align: right;
-      }
-    </style>
+    <link rel="stylesheet" href="..//CSS/Ex04.css" />
   </head>
   <body>
     <p>ciao ...</p>
@@ -43,5 +23,8 @@
     <img src="..//MEDIA/koala.jpg"" width="300" height="200">
     <div></div>
     <a href="#">Geografia o gazzetta?</a>
+
+    <div></div>
+    <iframe src="https://www.ilgiornale.it/" class="frame"> </iframe>
   </body>
 </html>
