Aggiungi il file Ex05.html e il relativo file CSS per la ricetta delle Lasagne alla Bolognese

--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex05.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex05.html
@@ -1,5 +1,11 @@
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ex05.html</title>
@@ -7,5 +13,147 @@
   </head>
   <body>
     <h1>Ricetta Lasagne alla Bolognese</h1>
+    <h2>Ingredienti:</h2>
+    <div></div>
+    <h3>Per la sfoglia all'uovo verde</h3>
+    <ol>
+      <li>Semola di grano duro rimacinata 175 g</li>
+      <li>Farina 00 75 g</li>
+      <li>Spinaci 125 g</li>
+      <li>Uova 1</li>
+      <li>Tuorli 2</li>
+      <li>Sale fino q.b.</li>
+      <li>Per la superficie:</li>
+    </ol>
+    <h3>Per il ragù</h3>
+    <ol>
+      <li>Macinato di manzo 700 g</li>
+      <li>Passata di pomodoro 350 g</li>
+      <li>Pancetta fresca 270 g</li>
+      <li>Carote 110 g</li>
+      <li>Sedano 110 g</li>
+      <li>Cipolle dorate 110 g</li>
+      <li>Brodo vegetale 350 g</li>
+      <li>Vino rosso 110 g</li>
+      <li>Doppio concentrato di pomodoro 2 cucchiai</li>
+      <li>Olio extravergine d'oliva 6 cucchiai</li>
+      <li>Sale fino q.b.</li>
+      <li>Pepe nero q.b.</li>
+    </ol>
+    <h3>Per la besciamella</h3>
+    <ol>
+      <li>Latte intero 800 g</li>
+      <li>Burro 50 g</li>
+      <li>Farina 00 50 g</li>
+      <li>Noce moscata q.b.</li>
+    </ol>
+    <h3>Per la superficie</h3>
+    <ol>
+      <li>Parmigiano Reggiano DOP 150 g</li>
+      <li>Burro q.b.</li>
+    </ol>
+    <h2>Procedimento</h2>
+    <h3>Ragù</h3>
+    <ol>
+      <li>
+        Per preparare le lasagne alla bolognese iniziate dal ragù: mondate e
+        tritate al coltello cipolla, sedano e carota.
+      </li>
+      <li>
+        Tritate anche la pancetta fresca. In una casseruola antiaderente, o di
+        alluminio o in ghisa smaltata, fate sciogliere la pancetta tritata
+        nell’olio caldo. Cuocete a fuoco moderato e costante finché non si sarà
+        ben rosolata.
+      </li>
+      <li>
+        Aggiungete le verdure per il soffritto e fate appassire il battuto
+        lentamente a calore medio-basso, mescolando spesso (la cipolla non deve
+        assolutamente prendere il sapore di bruciato). Alzate la fiamma e unite
+        la carne macinata, rimestando sempre accuratamente.
+      </li>
+      <li>
+        Cuocete per una decina di minuti, deve "sfrigolare" e risultare
+        asciutto. Sfumate con il vino e lasciatelo evaporare e ritirare
+        completamente, fino a quando non si sentirà più odore di alcol, poi
+        aggiungete il doppio concentrato di pomodoro.
+      </li>
+
+      <li>
+        Lasagne alla bolognese - Versate anche la passata di pomodoro e il brodo
+        caldo. Proseguite la cottura a fuoco dolce con il coperchio per 2 ore
+        circa. Lasagne alla bolognese - A metà cottura regolate di sale e di
+        pepe. Il ragù dovrà risultare di un bel colore arancione scuro,
+        avvolgente e cremoso.
+      </li>
+    </ol>
+    <h3>Pasta Fresca</h3>
+    <ol>
+      <li>
+        Mentre il ragù cuoce potete occuparvi della pasta fresca: come prima
+        cosa versate gli spinaci in un tegame, aggiungete poca acqua, coprite
+        con un coperchio e cuocete fino a che non saranno appassiti; in totale
+        ci vorranno 5-6 minuti.
+      </li>
+      <li>
+        Scolate gli spinaci, lasciateli intiepidire e strizzateli bene.
+        Trasferiteli in un mixer e frullateli con l’uovo e i tuorli fino ad
+        ottenere una purea.
+      </li>
+      <li>
+        Su una spianatoia versate la semola e la farina 00, create un incavo al
+        centro e aggiungete il composto di uova e spinaci. Iniziate ad impastare
+        il tutto con una forchetta, incorporando pian piano il composto alla
+        farina.
+      </li>
+      <li>
+        Una volta raccolti gli ingredienti, trasferite l'impasto sulla
+        spianatoia e proseguite lavorando a mano. Impastate bene fino ad
+        ottenere un panetto omogeneo. Avvolgetelo nella pellicola e lasciate
+        riposare per 30 minuti a temperatura ambiente.
+      </li>
+    </ol>
+    <h3>Basciamella</h3>
+    Nel frattempo preparate la besciamella: in un pentolino mettete a scaldare
+    il latte, senza farlo bollire. In un altro tegame versate il burro e
+    lasciatelo fondere. Aggiungete la farina in una volta sola e cuocete per
+    pochi minuti fino ad ottenere un roux dorato. Versate quindi il latte caldo
+    in 3 volte, mescolando bene. Salate e aromatizzate con la noce moscata.
+    Continuate a mescolare fino ad ottenere una besciamella cremosa, ma
+    abbastanza fluida. Trasferite in una ciotolina, coprite con pellicola a
+    contatto e tenete da parte. Composizione Trascorso il tempo di riposo della
+    pasta, riprendete il panetto e prelevatene un pezzo, avendo cura di coprire
+    l'impasto restante con la pellicola per non farlo seccare. Spolverizzate la
+    porzione di pasta, appiattitela leggermente e passatela nella sfogliatrice
+    partendo dallo spessore più grande. Ripiegate la sfoglia e infarinatela
+    leggermente. Continuate a passare l'impasto tra i rulli riducendo man mano
+    lo spessore fino ad ottenere una sfoglia di mezzo mm. Trasferitela su una
+    spianatoia e ritagliate dei rettangoli di 26x17 cm; la sfoglia da cruda deve
+    essere grande 1 cm in meno rispetto alla dimensione della teglia che andrete
+    a utilizzare. Mettete sul fuoco una pentola colma d'acqua e salatela
+    leggermente. Quando inizierà a bollire immergete una sfoglia alla volta,
+    aspettate 30-40 secondi e, aiutandovi con una schiumarola, scolatela.
+    Trasferitela su un vassoio con un canovaccio e tamponate per togliere
+    l'acqua in eccesso. Proseguite in questo modo affiancando le sfoglie
+    sbollentate, senza sovrapporle. Non appena anche il ragù sarà pronto
+    aggiustate di sale e pepe e procedete alla composizione delle lasagne.
+    Prendete una teglia da lasagna grande 30x20 cm e distribuite sul fondo prima
+    uno strato sottile di besciamella e poi uno di ragù. Posizionate la prima
+    sfoglia, poi proseguite con uno strato di besciamella e uno di ragù.
+    Distribuite una parte del Parmigiano grattugiato. Posizionate sopra un'altra
+    sfoglia di pasta e continuate in questo modo fino a realizzare 6 strati.
+    Dopo aver posizionato l'ultima sfoglia coprite interamente la pasta con il
+    ragù rimanente, poi cospargete con il formaggio grattugiato. Aggiungete dei
+    ciuffetti di burro e cuocete in forno statico preriscaldato a 170° per 40
+    minuti. Le lasagne alla bolognese sono pronte, lasciatele intiepidire prima
+    di.
+
+    <p>
+      Per maggiori dettagli sulla ricetta, visita il sito ufficiale:
+      <a
+        href="https://ricette.giallozafferano.it/Lasagne-alla-Bolognese.html"
+        target="https://ricette.giallozafferano.it/Lasagne-alla-Bolognese.html"
+        >Lasagne alla Bolognese</a
+      >.
+    </p>
   </body>
 </html>
