Aggiorna la ricetta delle Lasagne alla Bolognese con una nuova formattazione e aggiungi un file HTML alternativo

--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex05.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex05.html
@@ -113,39 +113,66 @@
       </li>
     </ol>
     <h3>Basciamella</h3>
-    Nel frattempo preparate la besciamella: in un pentolino mettete a scaldare
-    il latte, senza farlo bollire. In un altro tegame versate il burro e
-    lasciatelo fondere. Aggiungete la farina in una volta sola e cuocete per
-    pochi minuti fino ad ottenere un roux dorato. Versate quindi il latte caldo
-    in 3 volte, mescolando bene. Salate e aromatizzate con la noce moscata.
-    Continuate a mescolare fino ad ottenere una besciamella cremosa, ma
-    abbastanza fluida. Trasferite in una ciotolina, coprite con pellicola a
-    contatto e tenete da parte. Composizione Trascorso il tempo di riposo della
-    pasta, riprendete il panetto e prelevatene un pezzo, avendo cura di coprire
-    l'impasto restante con la pellicola per non farlo seccare. Spolverizzate la
-    porzione di pasta, appiattitela leggermente e passatela nella sfogliatrice
-    partendo dallo spessore più grande. Ripiegate la sfoglia e infarinatela
-    leggermente. Continuate a passare l'impasto tra i rulli riducendo man mano
-    lo spessore fino ad ottenere una sfoglia di mezzo mm. Trasferitela su una
-    spianatoia e ritagliate dei rettangoli di 26x17 cm; la sfoglia da cruda deve
-    essere grande 1 cm in meno rispetto alla dimensione della teglia che andrete
-    a utilizzare. Mettete sul fuoco una pentola colma d'acqua e salatela
-    leggermente. Quando inizierà a bollire immergete una sfoglia alla volta,
-    aspettate 30-40 secondi e, aiutandovi con una schiumarola, scolatela.
-    Trasferitela su un vassoio con un canovaccio e tamponate per togliere
-    l'acqua in eccesso. Proseguite in questo modo affiancando le sfoglie
-    sbollentate, senza sovrapporle. Non appena anche il ragù sarà pronto
-    aggiustate di sale e pepe e procedete alla composizione delle lasagne.
-    Prendete una teglia da lasagna grande 30x20 cm e distribuite sul fondo prima
-    uno strato sottile di besciamella e poi uno di ragù. Posizionate la prima
-    sfoglia, poi proseguite con uno strato di besciamella e uno di ragù.
-    Distribuite una parte del Parmigiano grattugiato. Posizionate sopra un'altra
-    sfoglia di pasta e continuate in questo modo fino a realizzare 6 strati.
-    Dopo aver posizionato l'ultima sfoglia coprite interamente la pasta con il
-    ragù rimanente, poi cospargete con il formaggio grattugiato. Aggiungete dei
-    ciuffetti di burro e cuocete in forno statico preriscaldato a 170° per 40
-    minuti. Le lasagne alla bolognese sono pronte, lasciatele intiepidire prima
-    di.
+    <ol>
+      <li>
+        Nel frattempo preparate la besciamella: in un pentolino mettete a
+        scaldare il latte, senza farlo bollire. In un altro tegame versate il
+        burro e lasciatelo fondere. Aggiungete la farina in una volta sola e
+        cuocete per pochi minuti fino ad ottenere un roux dorato. Versate quindi
+        il latte caldo in 3 volte, mescolando bene.
+      </li>
+      <li>
+        Salate e aromatizzate con la noce moscata. Continuate a mescolare fino
+        ad ottenere una besciamella cremosa, ma abbastanza fluida. Trasferite in
+        una ciotolina, coprite con pellicola a contatto e tenete da parte.
+      </li>
+    </ol>
+    <h3>Composizione</h3>
+    <ol>
+      <li>
+        Trascorso il tempo di riposo della pasta, riprendete il panetto e
+        prelevatene un pezzo, avendo cura di coprire l'impasto restante con la
+        pellicola per non farlo seccare. Spolverizzate la porzione di pasta,
+        appiattitela leggermente e passatela nella sfogliatrice partendo dallo
+        spessore più grande. Ripiegate la sfoglia e infarinatela leggermente.
+      </li>
+      <li>
+        Continuate a passare l'impasto tra i rulli riducendo man mano lo
+        spessore fino ad ottenere una sfoglia di mezzo mm. Trasferitela su una
+        spianatoia e ritagliate dei rettangoli di 26x17 cm; la sfoglia da cruda
+        deve essere grande 1 cm in meno rispetto alla dimensione della teglia
+        che andrete a utilizzare.
+      </li>
+      <li>
+        Mettete sul fuoco una pentola colma d'acqua e salatela leggermente.
+        Quando inizierà a bollire immergete una sfoglia alla volta, aspettate
+        30-40 secondi e, aiutandovi con una schiumarola, scolatela.
+      </li>
+      <li>
+        Trasferitela su un vassoio con un canovaccio e tamponate per togliere
+        l'acqua in eccesso. Proseguite in questo modo affiancando le sfoglie
+        sbollentate, senza sovrapporle. Non appena anche il ragù sarà pronto
+        aggiustate di sale e pepe e procedete alla composizione delle lasagne.
+        Prendete una teglia da lasagna grande 30x20 cm e distribuite sul fondo
+        prima uno strato sottile di besciamella e poi uno di ragù.
+      </li>
+      <li>
+        Posizionate la prima sfoglia, poi proseguite con uno strato di
+        besciamella e uno di ragù. Distribuite una parte del Parmigiano
+        grattugiato.
+      </li>
+      <li>
+        Posizionate sopra un'altra sfoglia di pasta e continuate in questo modo
+        fino a realizzare 6 strati. Dopo aver posizionato l'ultima sfoglia
+        coprite interamente la pasta con il ragù rimanente, poi cospargete con
+        il formaggio grattugiato.
+      </li>
+      <li>
+        Aggiungete dei ciuffetti di burro e cuocete in forno statico
+        preriscaldato a 170° per 40 minuti. Le lasagne alla bolognese sono
+        pronte, lasciatele intiepidire prima di servire.
+      </li>
+    </ol>
 
     <p>
       Per maggiori dettagli sulla ricetta, visita il sito ufficiale:
