Aggiorna il percorso di anteprima predefinito in settings.json e aggiungi i file HTML e CSS per il nuovo esercizio Es40, inclusi gli script per il disegno su canvas.

--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex01B.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex01B.html
@@ -2,33 +2,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      .evidenziato {
-        background-color: hotpink;
-        padding: 2px 5px;
-        border-radius: 3px;
-      }
-    </style>
+    <link rel="stylesheet" href="..//CSS//Ex01B.css" />
+    <title>Ex01-B.html</title>
+    <body><h1>Titolo H1</h1></body>
   </head>
-  <body>
-    <h1>
-      <span class="evidenziato">Il mio primo Esercizio in HTML by 3BIF</span>
-    </h1>
-    <h2>Il mio primo Esercizio in HTML by 3BIF</h2>
-    <h3>Il mio primo Esercizio in HTML by 3BIF</h3>
-    <h4>Il mio primo Esercizio in HTML by 3BIF</h4>
-    <h5>Il mio primo Esercizio in HTML by 3BIF</h5>
-    <h6>Il mio primo Esercizio in HTML by 3BIF</h6>
-  </body>
 </html>
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ex01B</title>
-  </head>
-  <body></body>
-</html>
-
