Aggiungi il file Ex01B.css e modifica Ex01B.html per applicare uno stile di intestazione con gradiente

--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex01B.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex01B.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="..//CSS//Ex01B.css" />
     <title>Ex01-B.html</title>
-    <body><h1>Titolo H1</h1></body>
+    <body>
+      <h1 class="gradient-block">Titolo H1</h1>
+    </body>
   </head>
 </html>
