Aggiungi regole CSS per il colore e l'allineamento del testo in Ex14.css e modifica il link al foglio di stile in Ex14.html

--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex14.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex14.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ex14.html</title>
-    <link rel="stylesheet" href="..//CSS/Ex14.css" />
+    <link rel="stylesheet" type="text/css" href="..//CSS/Ex14.css" />
   </head>
   <body>
     <h1>H1: CSS, font-family, font-size, text-align, color</h1>
