--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Es20.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Es20.html
@@ -6,6 +6,38 @@
     <link rel="stylesheet" href="..//CSS/Ex20.css" />
   </head>
   <body>
-    <h1>HTMNL e forms</h1>
+    <h1>HTML e forms</h1>
+    <form action="""#" method="""po
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome" required><br><br>
+
+        <label for="cognome">Cognome:</label>
+        <input type="text" id="cognome" name="cognome" required><br><br>
+
+        <label for="mail">Mail:</label>
+        <input type="email" id="mail" name="mail" required><br><br>
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required><br><br>
+
+        <label for="data">Data:</label>
+        <input type="date" id="data" name="data" required><br><br>
+
+        <label for="ora">Ora:</label>
+        <input type="time" id="ora" name="ora" required><br><br>
+
+        <label for="prezzo">Prezzo:</label>
+        <input type="number" id="prezzo" name="prezzo" step="0.01" required><br><br>
+
+        <label for="prezzo2">Prezzo2:</label>
+        <input type="number" id="prezzo2" name="prezzo2" step="0.01" required><br><br>
+
+        <label for="privacy">
+            <input type="checkbox" id="privacy" name="privacy" required>
+            Accetto la Privacy Policy
+        </label><br><br>
+
+        <button type="submit">Invia</button>
+    </form>st"></form>
   </body>
 </html>
