--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Es20.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Es20.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>HTML e forms</h1>
-    <form action="""#" method="""po
+    <form action="#" method="post">
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome" required><br><br>
 
@@ -21,23 +21,30 @@
         <input type="password" id="password" name="password" required><br><br>
 
         <label for="data">Data:</label>
-        <input type="date" id="data" name="data" required><br><br>
+        <input type="date" id="data" name="data" min="2024-05-01" max="2024-06-20" required><br><br>
 
         <label for="ora">Ora:</label>
-        <input type="time" id="ora" name="ora" required><br><br>
+        <input type="time" id="ora" name="ora" min="09:00" max="18:00" required><br><br>
 
         <label for="prezzo">Prezzo:</label>
-        <input type="number" id="prezzo" name="prezzo" step="0.01" required><br><br>
+        <input type="number" id="prezzo" name="prezzo" step="0.01" min="0.50" max="5.00" required><br><br>
 
         <label for="prezzo2">Prezzo2:</label>
-        <input type="number" id="prezzo2" name="prezzo2" step="0.01" required><br><br>
+        <input type="number" id="prezzo2" name="prezzo2" step="0.01" min="0.50" max="10.00" required><br><br>
 
-        <label for="privacy">
-            <input type="checkbox" id="privacy" name="privacy" required>
+        <label for="privacy-yes"></label>
+            <input type="radio" id="privacy-yes" name="privacy" value="yes" required>
             Accetto la Privacy Policy
+        </label><br>
+        <label for="privacy-no">
+            <input type="radio" id="privacy-no" name="privacy" value="no" required>
+            Non accetto la Privacy Policy
         </label><br><br>
 
         <button type="submit">Invia</button>
-    </form>st"></form>
+    </form>
+    </form></form>
+    <h3>Clicci su Invia ed i dati saranno inviati sul server...</h3>
+    <h1 class="Modulo">FINE MODULO</h1>
   </body>
 </html>
