Aggiungi un link alternativo nel file Ex05.html

--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex05.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex05.html
@@ -180,7 +180,7 @@
         href="https://ricette.giallozafferano.it/Lasagne-alla-Bolognese.html"
         target="https://ricette.giallozafferano.it/Lasagne-alla-Bolognese.html"
         >Lasagne alla Bolognese</a
-      >.
+      >. <a href="..//HTML/Ex05(Alternative).html"
     </p>
   </body>
 </html>
