Aggiungi il file Ex13-B.html e il foglio di stile Ex13-B.css; aggiorna il titolo in Ex13.html

--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex13.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex13.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Ex13.html</title>
     <link rel="stylesheet" type="text/css" href="..//CSS/Ex13.css"
   </head>
   <body>
