--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex13-B.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex13-B.html
@@ -3,8 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ex13-B.html</title>
-</head>
-<body>
     
+</head>
+<body id="corpo">
+    <p>Applico proprietà CSS al Body, H1 e p</p>
+    <h1 id="H1">Ecco come viene H1</h1>
 </body>
 </html>
