--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex13.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex13.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ex13.html</title>
-    <link rel="stylesheet" type="text/css" href="..//CSS/Ex13.css"
+    <link rel="stylesheet" type="text/css" href="..//CSS/Ex13.css" />
   </head>
   <body>
     <p>Uso di CSS per un elemento con ID specificato</p>
