Aggiungi stili CSS per H1 e paragrafo in Ex13-B.css; aggiorna Ex13-B.html con nuovi elementi e ID

--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex13-B.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex13-B.html
@@ -1,12 +1,14 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ex13-B.html</title>
-    
-</head>
-<body id="corpo">
+    <link rel="stylesheet" type="text/css" href="..//CSS/Ex13-B.css"
+  </head>
+  <body id="corpo">
     <p>Applico proprietà CSS al Body, H1 e p</p>
     <h1 id="H1">Ecco come viene H1</h1>
-</body>
+    <p id="paragraph">Ecco un paragrafo</p>
+    <h1 id="H1">Un altro H1</h1>
+  </body>
 </html>
