Aggiorna Ex15.html e Ex15.js: correggi la struttura HTML e migliora il rendering del canvas con nuovi elementi grafici e un gradiente

--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex15.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex15.html
@@ -1,18 +1,27 @@
 <html lang="en-GB">
-  <!-- Set the language to British English -->
   <head>
     <meta charset="UTF-8" />
-    <!-- Specify the character encoding -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Ensure proper scaling on mobile devices -->
     <title>Ex15.html</title>
-    <!-- Title of the document -->
-    <script src="Ex15.js"></script>
-    <!-- Link to the external JavaScript file -->
+    <script src="Ex15.js" defer></script>
   </head>
   <body>
-    <!-- Canvas element for drawing graphics -->
-    <canvas id="c1" width="500" height="300" style="border: 3px solid black">
-    </canvas>
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Canvas Example</title>
+      </head>
+      <body>
+        <!-- Add your HTML content here -->
+        <canvas
+          id="c1"
+          width="400"
+          height="400"
+          style="border: 1px solid #000"
+        ></canvas>
+      </body>
+    </html>
   </body>
 </html>
