Correggi la chiusura del tag link nel file Ex13-B.html

--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex13-B.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex13-B.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ex13-B.html</title>
-    <link rel="stylesheet" type="text/css" href="..//CSS/Ex13-B.css"
+    <link rel="stylesheet" type="text/css" href="..//CSS/Ex13-B.css" />
   </head>
   <body id="corpo">
     <p>Applico proprietà CSS al Body, H1 e p</p>
