Rimuovi codice commentato e migliora la formattazione in Ex04 e Ex05 JavaScript

--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex05(JavaScript).html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex05(JavaScript).html
@@ -9,18 +9,19 @@ visualizza con document.getElementById("numeri").innerHTML
 -->
 <!DOCTYPE html>
 <html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Esercizio 05</title>
-</head>
-<body>
-<script>
-    var x = 3.14;
-    var y = 5;
-    var z = x + y;
-    document.getElementById("numeri").innerHTML = "La somma di x e y è: " + z;
-</script>
+  </head>
+  <body>
+    <script>
+      var x = 3.14;
+      var y = 5;
+      var z = x + y;
+      document.getElementById("numeri").innerHTML = "La somma di x e y è: " + z;
+    </script>
 
-<div id="""numeri"></div>
-
+    <div id="numeri"></div>
+  </body>
+</html>
