--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex07(JavaScript).html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex07(JavaScript).html
@@ -1,26 +1,45 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JavaScript Tipi Dinamici</title>
+    <title>Cambia Style Font e Testo</title>
   </head>
   <body>
-    <h2>JavaScript ha tipi dato dinamici</h2>
-    <p>Ovvero la stessa variabile può contenere tipi diversi</p>
-
-    <p id="es1"></p>
-    <p id="es2"></p>
-
     <script>
-      var x; // X non è definito
-      x = 5; // ora è un numero
-      document.getElementById("es1").innerHTML =
-        "Il valore di x è: " + x + " (tipo: " + typeof x + ")";
+      function resetFontSize() {
+        document.getElementById("pippo").style.fontSize = "";
+      }
 
-      x = "John"; // ora è una stringa
-      document.getElementById("es2").innerHTML =
-        "Il valore di x è: " + x + " (tipo: " + typeof x + ")";
+      function resetStyle() {
+        document.getElementById("pippo").style.cssText = "";
+      }
     </script>
+
+    <button type="button" onclick="resetFontSize()">
+      Ripristina Dimensione
+    </button>
+    <button type="button" onclick="resetStyle()">Ripristina Stile</button>
+
+    <style>
+      p {
+        font-size: 20px;
+      }
+    </style>
+    <p id="pippo">Questo è un testo di esempio.</p>
+
+    <button
+      type="button"
+      onclick='document.getElementById("pippo").style.fontSize = "50px";'
+    >
+      Cambia Dimensione
+    </button>
+
+    <button
+      type="button"
+      onclick='document.getElementById("pippo").style.cssText = "font-size: 50px; color: red; font-family: Montserrat, sans-serif;"'
+    >
+      Cambia Dimensione e Colore
+    </button>
   </body>
 </html>
