Correggi l'icona del pulsante per "Hypnotize" da chitarra a batteria

--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex19.html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Ex19.html
@@ -48,7 +48,7 @@
     <button onclick="playAudio1()">
       🎵 Big Poppa, The Notorious B.I.G. (2005 Remaster, Explicit V.)
     </button>
-    <button onclick="playAudio2()">🎸 Hypnotize, The Notorious B.I.G.</button>
+    <button onclick="playAudio2()">🥁 Hypnotize, The Notorious B.I.G.</button>
     <button onclick="playAudio3()">🎤 Shook Ones, Mobb Deep</button>
 
     <script>
