Aggiorna il percorso del file audio per l'allerta nel file Es40(JavaScript).html

--- a/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Es40(JavaScript).html
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/HTML/Es40(JavaScript).html
@@ -57,7 +57,7 @@
       <p class="text-center fs-5">
         Totale: <span id="totale" class="fw-bold">0.00</span> €
       </p>
-      <audio id="audioAlert" src="alert.mp3" preload="auto"></audio>
+      <audio id="audioAlert" src="..//MEDIA/gun.mp3" preload="auto"></audio>
     </div>
 
     <!-- Bootstrap JS Bundle -->
